# APROG

./: ASCII_gen.py  README.md  main.py  pyproject.toml  sinusplot.py
PROJECT/: Jpnb notes.ipynb  Opendata_projektaprog.py  PROJECT.ipynb  api_bridge.ipynb  greet_me.py
SW-01/: SW01.ipynb  verdoppeln.py
SW-02/: SW02.ipynb
SW-03/: SW03.ipynb
SW-04/: SW04.ipynb
SW-05/: SW05.ipynb
SW-06/: SW06.ipynb  Sirene.py
SW-07/: SW07.ipynb
SW-08/: SW08.ipynb
SW-09/: SW09.ipynb
