[project]
name = "aprog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.5",
    "microfs>=1.4.5",
    "numpy>=2.3.2",
    "panda>=0.3.1",
    "pandas>=2.3.3",
    "pyfiglet>=1.0.4",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "uflash>=2.0.0",
]
